Do not provide JAXB artifacts from jdisc or on the build path.
- There is currently no OSGi friendly way to provide JAXB.
  (org.glassfish.jaxb:jaxb-runtime w/friends are not osgi bundles.)